Layouting index.html e.g. fix login button, add whitespace

--- a/source/stylesheets/_bootstrap-variables.sass
+++ b/source/stylesheets/_bootstrap-variables.sass
@@ -11,7 +11,8 @@
 $gray-base:              #5B5B5B
 $gray-light:             #ddd
 $gray-medium-light:      #999
-$green:                  #6DCC8D
+$green:                  #78d298
+
 // $gray-darker:            lighten($gray-base, 13.5%) // #222
 // $gray-dark:              lighten($gray-base, 20%)   // #333
 // $gray:                   lighten($gray-base, 33.5%) // #555
